// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Halaman Produk Server renders produk server page correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h1>
          Halaman Produk Server
        </h1>
        <div
          class="produk"
        >
          <h1
            class="produk__title"
            data-testid="title"
          >
            Daftar Produk
          </h1>
          <div
            class="produk__content"
            data-testid="product-list"
          >
            <a
              class="produk__content__item"
              href="/produk/1"
            >
              <div
                class="produk__content__item__image"
              >
                <img
                  alt="Produk 1"
                  data-nimg="1"
                  decoding="async"
                  height="200"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75 2x"
                  style="color: transparent;"
                  width="200"
                />
              </div>
              <div
                class="produk__content__item__info"
              >
                <h4
                  class="produk__content__item__name"
                >
                  Produk 1
                </h4>
                <p
                  class="produk__content__item__price"
                >
                  Rp 
                  10.000
                </p>
                <p
                  class="produk__content__item__category"
                >
                  Pakaian
                   • Size: 
                  M
                </p>
              </div>
            </a>
            <a
              class="produk__content__item"
              href="/produk/2"
            >
              <div
                class="produk__content__item__image"
              >
                <img
                  alt="Produk 2"
                  data-nimg="1"
                  decoding="async"
                  height="200"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75 2x"
                  style="color: transparent;"
                  width="200"
                />
              </div>
              <div
                class="produk__content__item__info"
              >
                <h4
                  class="produk__content__item__name"
                >
                  Produk 2
                </h4>
                <p
                  class="produk__content__item__price"
                >
                  Rp 
                  20.000
                </p>
                <p
                  class="produk__content__item__category"
                >
                  Pakaian
                   • Size: 
                  M
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h1>
        Halaman Produk Server
      </h1>
      <div
        class="produk"
      >
        <h1
          class="produk__title"
          data-testid="title"
        >
          Daftar Produk
        </h1>
        <div
          class="produk__content"
          data-testid="product-list"
        >
          <a
            class="produk__content__item"
            href="/produk/1"
          >
            <div
              class="produk__content__item__image"
            >
              <img
                alt="Produk 1"
                data-nimg="1"
                decoding="async"
                height="200"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75 2x"
                style="color: transparent;"
                width="200"
              />
            </div>
            <div
              class="produk__content__item__info"
            >
              <h4
                class="produk__content__item__name"
              >
                Produk 1
              </h4>
              <p
                class="produk__content__item__price"
              >
                Rp 
                10.000
              </p>
              <p
                class="produk__content__item__category"
              >
                Pakaian
                 • Size: 
                M
              </p>
            </div>
          </a>
          <a
            class="produk__content__item"
            href="/produk/2"
          >
            <div
              class="produk__content__item__image"
            >
              <img
                alt="Produk 2"
                data-nimg="1"
                decoding="async"
                height="200"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75 2x"
                style="color: transparent;"
                width="200"
              />
            </div>
            <div
              class="produk__content__item__info"
            >
              <h4
                class="produk__content__item__name"
              >
                Produk 2
              </h4>
              <p
                class="produk__content__item__price"
              >
                Rp 
                20.000
              </p>
              <p
                class="produk__content__item__category"
              >
                Pakaian
                 • Size: 
                M
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Halaman Produk Static renders produk static page correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h1>
          Halaman Produk Static
        </h1>
        <div
          class="produk"
        >
          <h1
            class="produk__title"
            data-testid="title"
          >
            Daftar Produk
          </h1>
          <div
            class="produk__content"
            data-testid="product-list"
          >
            <a
              class="produk__content__item"
              href="/produk/1"
            >
              <div
                class="produk__content__item__image"
              >
                <img
                  alt="Produk 1"
                  data-nimg="1"
                  decoding="async"
                  height="200"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75 2x"
                  style="color: transparent;"
                  width="200"
                />
              </div>
              <div
                class="produk__content__item__info"
              >
                <h4
                  class="produk__content__item__name"
                >
                  Produk 1
                </h4>
                <p
                  class="produk__content__item__price"
                >
                  Rp 
                  10.000
                </p>
                <p
                  class="produk__content__item__category"
                >
                  Pakaian
                   • Size: 
                  M
                </p>
              </div>
            </a>
            <a
              class="produk__content__item"
              href="/produk/2"
            >
              <div
                class="produk__content__item__image"
              >
                <img
                  alt="Produk 2"
                  data-nimg="1"
                  decoding="async"
                  height="200"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75 2x"
                  style="color: transparent;"
                  width="200"
                />
              </div>
              <div
                class="produk__content__item__info"
              >
                <h4
                  class="produk__content__item__name"
                >
                  Produk 2
                </h4>
                <p
                  class="produk__content__item__price"
                >
                  Rp 
                  20.000
                </p>
                <p
                  class="produk__content__item__category"
                >
                  Pakaian
                   • Size: 
                  M
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h1>
        Halaman Produk Static
      </h1>
      <div
        class="produk"
      >
        <h1
          class="produk__title"
          data-testid="title"
        >
          Daftar Produk
        </h1>
        <div
          class="produk__content"
          data-testid="product-list"
        >
          <a
            class="produk__content__item"
            href="/produk/1"
          >
            <div
              class="produk__content__item__image"
            >
              <img
                alt="Produk 1"
                data-nimg="1"
                decoding="async"
                height="200"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75 2x"
                style="color: transparent;"
                width="200"
              />
            </div>
            <div
              class="produk__content__item__info"
            >
              <h4
                class="produk__content__item__name"
              >
                Produk 1
              </h4>
              <p
                class="produk__content__item__price"
              >
                Rp 
                10.000
              </p>
              <p
                class="produk__content__item__category"
              >
                Pakaian
                 • Size: 
                M
              </p>
            </div>
          </a>
          <a
            class="produk__content__item"
            href="/produk/2"
          >
            <div
              class="produk__content__item__image"
            >
              <img
                alt="Produk 2"
                data-nimg="1"
                decoding="async"
                height="200"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fvia.placeholder.com%2F150&w=640&q=75 2x"
                style="color: transparent;"
                width="200"
              />
            </div>
            <div
              class="produk__content__item__info"
            >
              <h4
                class="produk__content__item__name"
              >
                Produk 2
              </h4>
              <p
                class="produk__content__item__price"
              >
                Rp 
                20.000
              </p>
              <p
                class="produk__content__item__category"
              >
                Pakaian
                 • Size: 
                M
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tampilan Produk renders produk page correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="produk"
        >
          <h1
            class="produk__title"
            data-testid="title"
          >
            Daftar Produk
          </h1>
          <div
            class="produk__content"
            data-testid="product-list"
          >
            <div
              class="produk__content__skeleton"
            >
              <div
                class="produk__content__skeleton__image"
              />
              <div
                class="produk__content__skeleton__info"
              >
                <div
                  class="produk__content__skeleton__name"
                />
                <div
                  class="produk__content__skeleton__name_short"
                />
                <div
                  class="produk__content__skeleton__price"
                />
                <div
                  class="produk__content__skeleton__category"
                />
              </div>
            </div>
            <div
              class="produk__content__skeleton"
            >
              <div
                class="produk__content__skeleton__image"
              />
              <div
                class="produk__content__skeleton__info"
              >
                <div
                  class="produk__content__skeleton__name"
                />
                <div
                  class="produk__content__skeleton__name_short"
                />
                <div
                  class="produk__content__skeleton__price"
                />
                <div
                  class="produk__content__skeleton__category"
                />
              </div>
            </div>
            <div
              class="produk__content__skeleton"
            >
              <div
                class="produk__content__skeleton__image"
              />
              <div
                class="produk__content__skeleton__info"
              >
                <div
                  class="produk__content__skeleton__name"
                />
                <div
                  class="produk__content__skeleton__name_short"
                />
                <div
                  class="produk__content__skeleton__price"
                />
                <div
                  class="produk__content__skeleton__category"
                />
              </div>
            </div>
            <div
              class="produk__content__skeleton"
            >
              <div
                class="produk__content__skeleton__image"
              />
              <div
                class="produk__content__skeleton__info"
              >
                <div
                  class="produk__content__skeleton__name"
                />
                <div
                  class="produk__content__skeleton__name_short"
                />
                <div
                  class="produk__content__skeleton__price"
                />
                <div
                  class="produk__content__skeleton__category"
                />
              </div>
            </div>
            <div
              class="produk__content__skeleton"
            >
              <div
                class="produk__content__skeleton__image"
              />
              <div
                class="produk__content__skeleton__info"
              >
                <div
                  class="produk__content__skeleton__name"
                />
                <div
                  class="produk__content__skeleton__name_short"
                />
                <div
                  class="produk__content__skeleton__price"
                />
                <div
                  class="produk__content__skeleton__category"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="produk"
      >
        <h1
          class="produk__title"
          data-testid="title"
        >
          Daftar Produk
        </h1>
        <div
          class="produk__content"
          data-testid="product-list"
        >
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__info"
            >
              <div
                class="produk__content__skeleton__name"
              />
              <div
                class="produk__content__skeleton__name_short"
              />
              <div
                class="produk__content__skeleton__price"
              />
              <div
                class="produk__content__skeleton__category"
              />
            </div>
          </div>
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__info"
            >
              <div
                class="produk__content__skeleton__name"
              />
              <div
                class="produk__content__skeleton__name_short"
              />
              <div
                class="produk__content__skeleton__price"
              />
              <div
                class="produk__content__skeleton__category"
              />
            </div>
          </div>
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__info"
            >
              <div
                class="produk__content__skeleton__name"
              />
              <div
                class="produk__content__skeleton__name_short"
              />
              <div
                class="produk__content__skeleton__price"
              />
              <div
                class="produk__content__skeleton__category"
              />
            </div>
          </div>
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__info"
            >
              <div
                class="produk__content__skeleton__name"
              />
              <div
                class="produk__content__skeleton__name_short"
              />
              <div
                class="produk__content__skeleton__price"
              />
              <div
                class="produk__content__skeleton__category"
              />
            </div>
          </div>
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__info"
            >
              <div
                class="produk__content__skeleton__name"
              />
              <div
                class="produk__content__skeleton__name_short"
              />
              <div
                class="produk__content__skeleton__price"
              />
              <div
                class="produk__content__skeleton__category"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
